--- a/force-app/main/default/lwc/abc/abc.html
+++ b/force-app/main/default/lwc/abc/abc.html
@@ -11,6 +11,7 @@
                     label="Choose Object">
                 </lightning-input>
         </div>
+        <div class="slds-m-horizontal_medium"></div>
         <br>
         <div class="slds-m-horizontal_medium">    
             <lightning-button 
