--- a/force-app/main/default/lwc/abc/abc.html
+++ b/force-app/main/default/lwc/abc/abc.html
@@ -11,7 +11,7 @@
                     label="Choose Object">
                 </lightning-input>
         </div>
-        <div class="slds-m-horizontal_medium"></div>
+        <p class="slds-p-around_small">{message}</p>
         <br>
         <div class="slds-m-horizontal_medium">    
             <lightning-button 
