--- a/force-app/main/default/lwc/abc/abc.html
+++ b/force-app/main/default/lwc/abc/abc.html
@@ -5,7 +5,7 @@
                     type="search"
                     value={searchKey}
                     name="objectList"
-                    placeholder="Search..."
+                    placeholder="Search"
                     onchange={objectNameChange}
                     role="combobox"
                     label="Choose Object">
